solver-ginsberg: Cleanup